[workspace]
resolver = "2"
members = ["libs/extractor", "bindings/devup-ui-wasm", "libs/sheet", "libs/css"]

[profile.release]
# Optimize for small code size (critical for WASM binary)
opt-level = "s"
# Link-time optimization: enables cross-crate inlining and dead code elimination
lto = true
# Single codegen unit: maximizes optimization at cost of compile time
codegen-units = 1
# Strip debug symbols from release binary
strip = true
# Abort on panic: smaller binary, no unwinding overhead
panic = "abort"
