[package]
name = "devup-ui-wasm"
version = "0.1.0"
authors = ["owjs3901 <owjs3901@naver.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
extractor = { path = "../../libs/extractor" }
sheet = { path = "../../libs/sheet" }
css = { path = "../../libs/css" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
once_cell = "1.21.1"
js-sys = "0.3.77"
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
serial_test = "3.2.0"
insta = "1.42.2"
