[package]
name = "css"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
regex-lite = "0.1"
bimap = { version = "0.6.3" }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.3.1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "css_benchmark"
harness = false
