[package]
name = "css"
version = "0.1.0"
edition = "2024"
description = "CSS utilities and selector optimization for Devup UI"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/devup-ui"
keywords = ["css", "selectors", "optimization", "react", "devup-ui"]
categories = ["development-tools", "wasm", "web-programming"]

[lints]
workspace = true

[dependencies]
phf = { version = "0.14", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
regex-lite = "0.1"
bimap = { version = "0.6.3" }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.5.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "css_benchmark"
harness = false
