[package]
name = "extractor"
version = "0.1.0"
edition = "2024"
description = "Static style extraction engine for Devup UI"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/devup-ui"
keywords = ["css", "extractor", "jsx", "react", "devup-ui"]
categories = ["development-tools", "wasm", "web-programming"]

[lints]
workspace = true

[dependencies]
oxc_parser = "0.140.0"
oxc_syntax = "0.140.0"
oxc_span = "0.140.0"
oxc_allocator = "0.140.0"
oxc_ast = { version = "0.140.0", features = ["disable_old_builder"] }
oxc_ast_visit = "0.140.0"
oxc_codegen = "0.140.0"
oxc_transformer = "0.140.0"
oxc_semantic = "0.140.0"
css = { path = "../css" }
phf = "0.14"
strum = "0.28.0"
strum_macros = "0.28.0"
serde_json = "1.0"
boa_engine = "0.21"
rustc-hash = "2"
smallvec = "1"

[dev-dependencies]
insta = "1.48.0"
serial_test = "3.5.0"
rstest = "0.26.1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "extract_benchmark"
harness = false

[[bench]]
name = "alloc_benchmark"
harness = false
