[package]
name = "sheet"
version = "0.1.0"
edition = "2024"

[dependencies]
css = { path = "../css" }
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
extractor = { path = "../extractor" }

[dev-dependencies]
insta = "1.43.1"
serde_json = "1.0.141"
criterion = { version = "0.7", features = ["html_reports"] }
rstest = "0.26.1"

[[bench]]
name = "my_benchmark"
harness = false
