[package]
name = "sheet"
version = "0.1.0"
edition = "2024"

[dependencies]
css = { path = "../css" }
serde = { version = "1.0.225", features = ["derive"] }
regex = "1.11.2"
once_cell = "1.21.3"
extractor = { path = "../extractor" }

[dev-dependencies]
insta = "1.43.2"
serde_json = "1.0.145"
criterion = { version = "0.7", features = ["html_reports"] }
rstest = "0.26.1"

[[bench]]
name = "my_benchmark"
harness = false
