[package]
name = "sheet"
version = "0.1.0"
edition = "2024"
description = "CSS sheet generation and theme system for Devup UI"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/devup-ui"
keywords = ["css", "theme", "stylesheet", "react", "devup-ui"]
categories = ["development-tools", "wasm", "web-programming"]

[lints]
workspace = true

[dependencies]
css = { path = "../css" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
regex-lite = "0.1"
extractor = { path = "../extractor" }
rustc-hash = "2"

[dev-dependencies]
insta = "1.48.0"
criterion = { version = "0.8", features = ["html_reports"] }
rstest = "0.26.1"
serial_test = "3.5.0"

[[bench]]
name = "my_benchmark"
harness = false
